--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset ="UTF-8">
+	<title>MyBookList</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="container">
+		<h1>MyBookList</h1>
 
+		<div class="class-form-group">
+			<input type="text" id="title" placeholder="Book Title">
+			<input type="text" id="author" placeholder="Author">
+			<input type="text" id="isbn" placeholder="ISBN">
+			<button id="submit">Add Book</button>
+		</div>
+
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Title</th>
+					<th>Author</th>
+					<th>ISBN</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody id="book-list">
+				<!-- Books will be dynamically added here -->
+			</tbody>
+		</table>
+	</div>
+	
+<script src="script.js"></script>
 </body>
-
 </html>
