--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<h1>MyBookList</h1>
 
-		<div class="class-form-group">
+		<div class="form-group">
 			<input type="text" id="title" placeholder="Book Title">
 			<input type="text" id="author" placeholder="Author">
 			<input type="text" id="isbn" placeholder="ISBN">
